--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -770,7 +770,7 @@
 "feed.privacy.list.all" = "Mijn Contacten";
 
 /* Header for the list of all contacts on HallAapp. */
-"feed.privacy.list.all.details" = "Mijn HalloApp Contacten";
+"feed.privacy.list.all.details" = "Mijn HalloApp-contacten";
 
 /* Button to dismiss edit favorites modal */
 "feed.privacy.list.dismiss.edit.favorites" = "Niet Nu";
@@ -1391,16 +1391,16 @@
 "notification.one.video" = "📹 video";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.1" = "%@ heeft een nieuw moment gedeeld om die van jou te ontgrendelen";
+"notification.unlocked.moment.1" = "%@ heeft een nieuw moment gedeeld om die van jou te zien";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.2" = "%1$@ en %2$@ hebben een nieuw moment gedeeld om die van jou te ontgrendelen";
+"notification.unlocked.moment.2" = "%1$@ en %2$@ hebben een nieuw moment gedeeld om die van jou te zien";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.3" = "%1$@, %2$@ en %3$@ hebben een nieuw moment gedeeld om die van jou te ontgrendelen";
+"notification.unlocked.moment.3" = "%1$@, %2$@ en %3$@ hebben een nieuw moment gedeeld om die van jou te zien";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.4" = "%1$@, %2$@, %3$@ en anderen hebben een nieuw moment gedeeld om die van jou te ontgrendelen";
+"notification.unlocked.moment.4" = "%1$@, %2$@, %3$@ en anderen hebben een nieuw moment gedeeld om die van jou te zien";
 
 /* Missed video call notification text to be shown to the user. */
 "notification.videocall.missed" = "📹 Gemiste video-oproep";
