--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -1258,6 +1258,9 @@
 /* Title of text displayed the first time the user acts to post a second moment in the same day. */
 "moment.replacement.title" = "Atenção";
 
+/* Text on a locked moment that explains the need to post your own in order to view it. */
+"moment.unlock.disclaimer" = "Para ver o momento deles, compartilhe o seu";
+
 /* For indicating that there was an error while uploading the post. */
 "moment.uploading.failure" = "Erro";
 
