--- a/Share Extension/es.lproj/Localizable.strings
+++ b/Share Extension/es.lproj/Localizable.strings
@@ -175,6 +175,9 @@
 /* Placeholder when sharing text only. */
 "share.composer.placeholder.text" = "Crea una publicación";
 
+/* Title of alert displayed while processing media shared by share extension */
+"share.composer.processing.media" = "Procesando multimedia...";
+
 /* Alert dialog message shown when uploading fails. */
 "share.composer.uploading.fail.message" = "Por favor, inténtalo más tarde.";
 
