--- a/Halloapp/Base.lproj/Localizable.stringsdict
+++ b/Halloapp/Base.lproj/Localizable.stringsdict
@@ -294,5 +294,39 @@
 			<string>You can select up to %d items</string>
 		</dict>
 	</dict>
+	<key>n.fellow.contacts</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_contacts@</string>
+		<key>n_contacts</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>zero</key>
+			<string>You’re not connected to anyone on HalloApp yet</string>
+			<key>one</key>
+			<string>You’re connected to %d person on HalloApp</string>
+			<key>other</key>
+			<string>You’re connected to %d people on HalloApp</string>
+		</dict>
+	</dict>
+	<key>n.contacts.privacy.disclaimer</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_contacts@</string>
+		<key>n_contacts</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>This contact will be able to see your posts shared with all HalloApp contacts.</string>
+			<key>other</key>
+			<string>These contacts will be able to see your posts shared with all HalloApp contacts.</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
