--- a/Halloapp/ar.lproj/Localizable.stringsdict
+++ b/Halloapp/ar.lproj/Localizable.stringsdict
@@ -218,6 +218,54 @@
 			<string>تعذّر إعداد %d من ملفات الوسائط. يُرجى إعادة المحاولة أو تحديد صورة مختلفة أو فيديو آخر.</string>
 		</dict>
 	</dict>
+	<key>n.contacts.privacy.disclaimer</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_contacts@</string>
+		<key>n_contacts</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>These contacts will be able to see your posts shared with all HalloApp contacts.</string>
+			<key>many</key>
+			<string>These contacts will be able to see your posts shared with all HalloApp contacts.</string>
+			<key>one</key>
+			<string>This contact will be able to see your posts shared with all HalloApp contacts.</string>
+			<key>other</key>
+			<string>These contacts will be able to see your posts shared with all HalloApp contacts.</string>
+			<key>two</key>
+			<string>These contacts will be able to see your posts shared with all HalloApp contacts.</string>
+			<key>zero</key>
+			<string>These contacts will be able to see your posts shared with all HalloApp contacts.</string>
+		</dict>
+	</dict>
+	<key>n.fellow.contacts</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_contacts@</string>
+		<key>n_contacts</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>You’re connected to %d people on HalloApp</string>
+			<key>many</key>
+			<string>You’re connected to %d people on HalloApp</string>
+			<key>one</key>
+			<string>You’re connected to %d person on HalloApp</string>
+			<key>other</key>
+			<string>You’re connected to %d people on HalloApp</string>
+			<key>two</key>
+			<string>You’re connected to %d people on HalloApp</string>
+			<key>zero</key>
+			<string>You’re not connected to anyone on HalloApp yet</string>
+		</dict>
+	</dict>
 	<key>n.invites.count</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
