--- a/Share Extension/ar.lproj/Localizable.strings
+++ b/Share Extension/ar.lproj/Localizable.strings
@@ -175,6 +175,9 @@
 /* Placeholder when sharing text only. */
 "share.composer.placeholder.text" = "اكتب منشورًا";
 
+/* Title of alert displayed while processing media shared by share extension */
+"share.composer.processing.media" = "جارٍ معالجة الوسائط...";
+
 /* Alert dialog message shown when uploading fails. */
 "share.composer.uploading.fail.message" = "يُرجى إعادة المحاولة لاحقًا.";
 
